# arm_wizard

./: .gitignore  Cargo.toml  README.md  arm_wizard.sh  build.sh
.github/workflows/: release.yml
example/lerobot_101_6_salut/install/: local_setup.sh  setup.sh
example/lerobot_101_6_salut/lerobot_101_6_salut_description/: setup.py
example/lerobot_101_6_salut/lerobot_101_6_salut_description/meshes/: Moving_Jaw_SO101_v1_1.stl  Under_arm_SO101_v4_1.stl  Wrist_Roll_Follower_SO101_v3_1.stl  base_link.stl
example/lerobot_101_6_salut/lerobot_101_6_salut_description/urdf/: lerobot_101_6_salut.gazebo
example/lerobot_101_6_salut/lerobot_101_6_salut_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
example/lerobot_101_6_salut/lerobot_101_6_salut_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  lerobot_101_6_salut.ros2_control.xacro  lerobot_101_6_salut.srdf  lerobot_101_6_salut.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
example/lerobot_101_6_salut/lerobot_101_6_salut_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
example/lerobot_101_6_salut/lerobot_101_6_salut_play/: package.xml  setup.cfg  setup.py
example/lerobot_101_6_salut/lerobot_101_6_salut_play/launch/: play.launch.py
install/: local_setup.sh  setup.sh
install/lerobot_101_6_salut_description/share/lerobot_101_6_salut_description/: package.sh  (+1 more)
log/: latest_build
src/: main.rs
(+17 files in other folders)
