<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lerobot_101_6_salut_play</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="potato@todo.todo">potato</maintainer>
  <license>GPL-3.0-only</license>

  <depend>ament_index_python</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>moveit_configs_utils</depend>
  <depend>xacro</depend>
  <depend>lerobot_101_6_salut_moveit_config</depend>
  <depend>lerobot_101_6_salut_description</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>rviz2</depend>
  <depend>controller_manager</depend>
  <depend>ros2_controllers</depend>
  <depend>robot_state_publisher</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
